--- a/changelog.html
+++ b/changelog.html
@@ -8,6 +8,11 @@
 		<div style="text-align: center">
 			<b style="font-size: 48px">Changelog</b><br>
 			Starting from v0.1.4.0<br><br>
+			<b>v0.1.5.3 - FORKED</b> - November 11, 2019<br>
+			<list>
+				<li>Changed most wording (aarex's text)</li>
+				<li>Probably no features made yet</li>
+			</list><br>
 			<b>v0.1.5.3</b> - December 18, 2018<br>
 			<list>
 				<li>Added words gain for currencies box.</li>
