--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<div class="tab" id="tab_computers">
 					<div class="tab_locked" id="tab_locked_computers">
 						<b style="font-size: 48px">Unlock computers?</b><br>
-						<button class="unlock_button" onclick="unlock_computers()">512x multiplier</button>
+						<button class="unlock_button" onclick="unlock_computers()">512x file multiplier required</button>
 						<div id="total_file_boost_computers"></div>
 						<div id="perm_unlock_computers">
 							<b>Permanently unlock computers? (Will persist on transfer)</b><br>
