--- a/changelog.html
+++ b/changelog.html
@@ -13,7 +13,7 @@
 				<li>Changed most wording (aarex's text)</li>
 				<li>Made word formula slightly better (Math.floor(Math.pow(game.bytes, 0.125) / 100)). Might be too overpowered, so I may undo this change.</li>
 				<li>Change words gain boost from current based to total based (Nyan cat)</li>
-				<li>KNOWN BUG: Servers don't show after you buy them, then exit out of the computers menu. This will be fixed later</li>
+				<li>KNOWN BUG: Servers don't show after you buy them, then exit out of the computers menu with autobuyers on/after clicking the dissolve options. This will be fixed later.</li>
 			</list><br>
 			<b>v0.1.5.3</b> - December 18, 2018<br>
 			<list>
